# fallow4python

./: .gitignore  LICENSE  README.md  pyproject.toml  report.md  requirements.txt
src/fallow4python/: __init__.py  __main__.py  analyzers.py  cli.py  constants.py  correlate.py  coverage_run.py  cycles.py  discovery.py  duplication.py  explain.py  gitdiff.py  health.py  helpers.py  model.py  options.py  orchestrate.py  palette.py  parse_deps.py  parse_lint.py  parse_quality.py  parse_radon.py  parsers.py  progress.py  progress_style.py  records.py  render_human.py  render_machine.py  render_markdown.py  render_summary.py  runner.py  scoring.py  summary.py  toolspecs.py  verdict.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_cli_more.py  test_correlate.py  test_coverage_run.py  test_coverage_run_more.py  test_cycles_more.py  test_entrypoints.py  test_fallow4python.py  test_gitdiff.py  test_gitdiff_more.py  test_helpers.py  test_integration.py  test_misc_gaps.py  test_options.py  test_orchestrate.py  test_orchestrate_gaps.py  test_orchestrate_more.py  test_parse_deps.py  test_parse_gaps.py  test_parse_lint.py  test_parse_quality.py  test_parse_radon.py  test_progress.py  test_render.py  test_render_gaps.py  test_runner.py  test_runner_gaps.py  test_runner_more.py  test_scoring.py
