[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fallow4python"
description = "Codebase intelligence for Python: orchestrate quality tools, correlate the signals, audit changed code, one report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["linting", "static-analysis", "code-quality", "ci", "sarif", "dead-code", "complexity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["version"]

# The fallow4python module itself is pure standard library. These dependencies
# are the analyzers it orchestrates, pinned to compatible lower bounds so that
# `pip install fallow4python` gives you a working report out of the box.
dependencies = [
    "ruff>=0.5",
    "mypy>=1.8",
    "vulture>=2.10",
    "radon>=6.0",
    "deptry>=0.16",
    "xenon>=0.9",
]

[project.optional-dependencies]
# Extra analyzers that only activate when relevant (an importlinter contract is
# configured, or a coverage.py report is supplied via --coverage).
full = [
    "import-linter>=2.0",
    "coverage>=7.0",
]

[project.scripts]
fallow4python = "fallow4python.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/fallow4python"
Issues = "https://github.com/your-org/fallow4python/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "fallow4python.__version__" }
